# DataMiningCoursera

./: .gitignore  pyproject.toml
DataVisualization/week2/: gistemp.ipynb
DataVisualization/week3/: email.ipynb
