[project]
name = "data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ambivalent>=0.3.0",
    "aquarel>=0.0.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
]
